comment timeline - fix for newlines not being visible

--- a/app/react/components/TextWithMentions/TextWithMentions.css
+++ b/app/react/components/TextWithMentions/TextWithMentions.css
@@ -12,7 +12,6 @@
 }
 
 .root>p {
-  display: inline;
   margin: 0;
   padding: 0;
 }
